fix: update color variables for improved contrast in light and dark themes

--- a/src/app.css
+++ b/src/app.css
@@ -5,12 +5,12 @@
 @custom-variant dark (&:where(.dark, .dark *));
 
 :root {
-	--background: 0 0% 100%;
-	--foreground: 240 10% 3.9%;
+	--background: 0 0% 90%;
+	--foreground: 0 1% 20%;
 	--card: 0 0% 100%;
-	--card-foreground: 240 10% 3.9%;
+	--card-foreground: 240 3% 6%;
 	--popover: 0 0% 100%;
-	--popover-foreground: 240 10% 3.9%;
+	--popover-foreground: 240 3% 6%;
 	--primary: 240 5.9% 10%;
 	--primary-foreground: 0 0% 98%;
 	--secondary: 240 4.8% 95.9%;
@@ -51,8 +51,8 @@
 }
 
 .dark {
-	--background: 240 10% 3.9%;
-	--foreground: 0 0% 98%;
+	--background: 240 3% 6%;
+	--foreground: 0 0% 90%;
 	--card: 240 10% 3.9%;
 	--card-foreground: 0 0% 98%;
 	--popover: 240 10% 3.9%;
